--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -53,16 +53,11 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img
-              src="/images/box 1.jpg"
-              alt="Набирает код на клавиатуре"
-              width="370"
-              height="294"
-            />
+            <img src="/images/box1.jpg" alt="Набирает код на клавиатуре" width="370" height="294" />
           </li>
           <li>
             <img
-              src="/images/box 2.jpg"
+              src="/images/box2.jpg"
               alt="держит телефон перед монитором с изображением нескольких телефонов"
               width="370"
               height="294"
@@ -70,7 +65,7 @@
           </li>
           <li>
             <img
-              src="/images/box 3.jpg"
+              src="/images/box3.jpg"
               alt="планшет с таблицей цветов на нем"
               width="370"
               height="294"
@@ -123,7 +118,7 @@
       <a href="">WebStudio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
-      <div><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></div>
+      <div><a href="tell:+380961111111">+38 096 111 11 11</a></div>
     </footer>
   </body>
 </html>
