--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
     </header>
 
     <main>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+      <div>
+        <!--Div потому, что тут будет банер-->
+        <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+        </section>
+      </div>
+
       <!--Блок с особенностями, 4 столбика-->
       <section>
         <h2>Особенности</h2>
@@ -116,9 +122,11 @@
 
     <footer>
       <a href="">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <div><a href="mailto:info@devstudio.com">info@devstudio.com</a></div>
-      <div><a href="tell:+380961111111">+38 096 111 11 11</a></div>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26 <br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+        <a href="tell:+380961111111">+38 096 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
