--- a/index.html
+++ b/index.html
@@ -59,11 +59,16 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="/images/box1.jpg" alt="Набирает код на клавиатуре" width="370" height="294" />
+            <img
+              src="./images/box1.jpg"
+              alt="Набирает код на клавиатуре"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
             <img
-              src="/images/box2.jpg"
+              src="./images/box2.jpg"
               alt="держит телефон перед монитором с изображением нескольких телефонов"
               width="370"
               height="294"
@@ -71,7 +76,7 @@
           </li>
           <li>
             <img
-              src="/images/box3.jpg"
+              src="./images/box3.jpg"
               alt="планшет с таблицей цветов на нем"
               width="370"
               height="294"
@@ -84,21 +89,21 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/ihor.jpg" alt="дизайнер продукта" width="270" height="260" />
+            <img src="./images/ihor.jpg" alt="дизайнер продукта" width="270" height="260" />
             <p>
               Игорь Демьяненко <br />
               Product Designer
             </p>
           </li>
           <li>
-            <img src="/images/olha.jpg" alt="фронтенд-разработчик" width="270" height="260" />
+            <img src="./images/olha.jpg" alt="фронтенд-разработчик" width="270" height="260" />
             <p>
               Ольга Репина <br />
               Frontend Developer
             </p>
           </li>
           <li>
-            <img src="/images/nick.jpg" alt="маркетинг" width="270" height="260" />
+            <img src="./images/nick.jpg" alt="маркетинг" width="270" height="260" />
             <p>
               Николай Тарасов <br />
               Marketing
@@ -106,7 +111,7 @@
           </li>
           <li>
             <img
-              src="/images/michel.jpg"
+              src="./images/michel.jpg"
               alt="дизайнер пользовательского интерфейса"
               width="270"
               height="260"
