--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
     </header>
 
     <main>
-      <div>
-        <!--Div потому, что тут будет банер-->
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
 
       <!--Блок с особенностями, 4 столбика-->
       <section>
@@ -38,19 +35,23 @@
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            Идейные соображения, а также начало повседневной работы по формированию позиции.
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
-            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
           </li>
           <li>
             <h3>Планирование</h3>
-            Равным образом консультация с широким активом в значительной степени обуславливает.
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
@@ -90,24 +91,18 @@
         <ul>
           <li>
             <img src="./images/ihor.jpg" alt="дизайнер продукта" width="270" height="260" />
-            <p>
-              Игорь Демьяненко <br />
-              Product Designer
-            </p>
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/olha.jpg" alt="фронтенд-разработчик" width="270" height="260" />
-            <p>
-              Ольга Репина <br />
-              Frontend Developer
-            </p>
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/nick.jpg" alt="маркетинг" width="270" height="260" />
-            <p>
-              Николай Тарасов <br />
-              Marketing
-            </p>
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -116,10 +111,8 @@
               width="270"
               height="260"
             />
-            <p>
-              Михаил Ермаков <br />
-              UI Designer
-            </p>
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -128,9 +121,11 @@
     <footer>
       <a href="">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="tell:+380961111111">+38 096 111 11 11</a>
+        <p>г. Киев, пр-т Леси Украинки, 26 <br /></p>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br /></li>
+          <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
